@@ -1,7 +1,9 @@
 2011-06-30  Ross Johnson <ross dot johnson at homemail dot com dot au>
 
 	* pthread_once.c: Tighten 'if' statement casting; fix interlocked
-	pointer cast for 64 bit compatibility (missed yesterday).
+	pointer cast for 64 bit compatibility (missed yesterday); remove
+	the superfluous static cleanup routine and call the release routine
+	directly if popped.
 	* create.c (stackSize): Now type size_t.
 
 2011-06-29 Daniel Richard G. <skunk at iskunk dot org>
